--- a/AddOns/AddOns.csproj
+++ b/AddOns/AddOns.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Security\Interfaces\ISecurityService.cs" />
     <Compile Include="Security\Interfaces\IUser.cs" />
     <Compile Include="Security\Interfaces\IUserType.cs" />
+    <Compile Include="UI\Implementation\DialogWithReturnValue.cs" />
     <Compile Include="UI\Implementation\UIService.cs" />
     <Compile Include="Validation\Implementation\ValidationException.cs" />
     <Compile Include="Validation\Implementation\ValidationOutcome.cs" />
