--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -108,10 +108,12 @@
   <ItemGroup>
     <Compile Include="Implementation\Catalog.cs" />
     <Compile Include="Implementation\PersistableCatalog.cs" />
+    <Compile Include="Implementation\PersistableCatalogAsync.cs" />
     <Compile Include="Interfaces\ICatalog.cs" />
     <Compile Include="Interfaces\ICatalogChangedEvent.cs" />
     <Compile Include="Interfaces\ICatalogMediator.cs" />
     <Compile Include="Interfaces\IPersistableCatalog.cs" />
+    <Compile Include="Interfaces\IPersistableCatalogAsync.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Model.rd.xml" />
   </ItemGroup>
